2011-01-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Include <stdarg.h> for ‘va_start’ et al.

	* b-divvy.c: #include <stdarg.h>.
	* b-fb.c: Likewise.

2011-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Use "three manifestations" for ‘!DIFF3_BIN’.

	Reported by Nelson H. F. Beebe.
	Regression introduced 2010-09-30, "Use ‘struct symdef’
	array as "three manifestations" ‘merge’ arg".

	* merger.c (merge) [!DIFF3_BIN]: Use ‘LABEL’, not ‘label’.

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.97

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dtp] Fix bug: Handle ISO week+day dates.

	* maketime.c (ISO_day_of_week): New static func.
	(tm2time): Take additional arg YWEEK; if specified,
	compute yday, and maybe year, for later ‘yday’ processing.
	(maketime): Update call to ‘tm2time’.
	* maketime.h (tm2time): Update func decl.
	* rcstime.c (date2str): Update call to ‘tm2time’.

2011-01-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dtp] Fix bug: Encode weekday number (letter ‘X’) with modulo.

	* partime.c (parse_pattern_letter <X>): Use modulo to encode value.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Decruft: Remove "yet another redolently redundant RCS rap".

	* Makefile.am (EXTRA_DIST): Remove yarrrr.c.
	(YALL, YPROGS): Delete vars.
	($(YPROGS)): Delete target.
	(y-all, y-clean): Likewise.
	* yarrrr.c: Delete file.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] With ‘EXEEXT’, use ‘execvp’ instead of ‘execv’.

	* rcsutil.c (EXECV): New #define.
	(runv): Use ‘EXECV’.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] With ‘EXEEXT’, don't absolutize; instead, simply suffix.

	* b-peer.c (LOSE): Delete macro.
	(invocation_full_name): Delete func.
	(find_peer_prog) [!EXEEXT]: Call ‘find_in_path’, ‘PFATAL’
	directly; mention directory and env var ‘PATH’ in error message.
	(find_peer_prog) [EXEEXT]: Compute the underlying filename
	as simply the concatenation of the meaningful and ‘EXEEXT’.
