@@ -1,3 +1,14 @@
+2011-02-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[grok] Fix bug: Make sure error message accumulates cleanly.
+
+	Omission from 2010-05-24, "Rewrite parsing".
+
+	* b-grok.c: #include <stdarg.h>.
+	(ignoble): Take args FMT and varargs; discard work-in-progress
+	cruft on ‘g->systolic’; do accumulate string here, not ...
+	(BUMMER): ...here; update call to ‘ignoble’.
+
 2011-01-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Include <stdarg.h> for ‘va_start’ et al.
